# doxa

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-gpu.txt  setup.py
doxa/: __init__.py
doxa/algorithms/: __init__.py
doxa/algorithms/regression/: __init__.py  linear_regression.py  ridge.py
doxa/backend/: device_manager.py
doxa/core/: __init__.py  base.py  tensor.py
doxa/utils/: metrics.py
examples/: regression_demo.ipynb
tests/: conftest.py
tests/test_algorithms/test_regression/: test_linear_regression.py  test_ridge.py
tests/test_backend/: test_device_manager.py
tests/test_core/: test_base.py  test_tensor.py
